@@ -39,6 +39,7 @@ enum {
 	IMSETTINGS_GERROR_IM_NOT_FOUND,
 	IMSETTINGS_GERROR_INVALID_IMM,
 	IMSETTINGS_GERROR_UNABLE_TO_TRACK_IM,
+	IMSETTINGS_GERROR_OOM,
 	IMSETTINGS_GERROR_FAILED,
 };
 
